[tool.poetry]
name = "llama-qa"
version = "0.1.0"
description = ""
authors = ["Junpei Tsuji <junpei.tsuji.ams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
streamlit = "^1.31.1"
llama-index = "^0.10.11"
langchain-openai = "^0.0.6"
llama-index-llms-langchain = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
